<resources>
    <string name="app_name">MyMovieApp</string>
    <string name="search">Search</string>

    <string name="get_actor_id">Get actor id</string>
    <string name="enter_actor_name">Enter Actor name</string>
    <string name="enter_year">Enter Year</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="search_for_a_movie_by_title">Search</string>
    <string name="discover_a_new_movie">Discover</string>
    <string name="watchlist">Watchlist</string>
    <string name="ratings">Ratings</string>
    <string name="reset">Reset</string>
    <string name="test">test</string>
    <string name="rate">Rate</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="similar_movies">Similar movies</string>
    <string name="movie_info">Movie Info</string>
    <string name="name"><u>Name:</u></string>
    <string name="birth"><u>Birth:</u></string>
    <string name="death"><u>Death:</u></string>
    <string name="birthplace"><u>Birthplace:</u></string>
    <string name="bio">Bio</string>
    <string name="tagline"><u>Tagline:</u></string>
    <string name="runtime"><u>Runtime:</u></string>
    <string name="budget"><u>Budget:</u></string>
    <string name="revenue"><u>Revenue:</u></string>
    <string name="release_date"><u>Release Date:</u></string>
    <string name="genre"><u>Genre:</u></string>
    <string name="overview">Overview</string>
    <string name="known_for">Known for</string>
    <string name="cast">Cast</string>
    <string name="enter_movie_title_to_search">Enter Movie Title to Search</string>
    <string name="playing">Playing</string>
    <string name="now_playing">Now Playing</string>
    <string name="trending">Trending</string>
    <string name="your_ratings">Your Ratings</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="view">View</string>
    <string name="add">Add</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="similar_shows">Similar Shows</string>
    <string name="show_info">Show Info</string>
    <string name="created_by">Created by:</string>
    <string name="first_aired">First Aired:</string>
    <string name="last_aired">Last Aired:</string>
    <string name="number_of_episodes">Number of Episodes:</string>
    <string name="num_seasons">Number of Seasons:</string>
    <string name="show_ratings">Show Ratings</string>
    <string name="movie_ratings">Movie Ratings</string>
</resources>
