<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_drop_down"
        android:icon="@drawable/baseline_more_vert_black_48dp"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_home"
                android:icon="@drawable/home2"
                android:title="@string/home"
                app:showAsAction="ifRoom"
                />

            <item
                android:id="@+id/action_search"
                android:icon="@drawable/search"
                android:title="@string/search"
                app:showAsAction="ifRoom"
                />

            <item
                android:id="@+id/action_discover"
                android:icon="@drawable/discover"
                android:title="@string/discover"
                app:showAsAction="ifRoom"
                />

            <item
                android:id="@+id/action_watchlist"
                android:icon="@drawable/watchlist"
                android:title="@string/watchlist"
                app:showAsAction="ifRoom"
                />

            <item
                android:id="@+id/action_ratings"
                android:icon="@drawable/rate"
                android:title="@string/ratings"
                app:showAsAction="ifRoom"
                />

            <item
                android:id="@+id/action_playing"
                android:icon="@drawable/playing"
                android:title="@string/playing"
                app:showAsAction="ifRoom"
                />
        </menu>
    </item>
</menu>