<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_drawer_layout"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@color/colorMovieDBgreen"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >

        </android.support.v7.widget.Toolbar>

        <Button
            android:id="@+id/search_by_title_Btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/colorMovieDBgreen"
            android:drawableStart="@drawable/ic_search_black_48dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center|start"
            android:text="@string/search_for_a_movie_by_title"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/search_by_genre_Btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/colorMovieDBgreen"
            android:drawableStart="@drawable/ic_explore_black_48dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center|start"
            android:text="@string/discover_a_new_movie"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/watch_list_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/colorMovieDBgreen"
            android:drawableStart="@drawable/ic_bookmark_border_black_48dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center|start"
            android:text="@string/watchlist"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ratings_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/colorMovieDBgreen"
            android:drawableStart="@drawable/ic_stars_white_48dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center|start"
            android:text="@string/ratings"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nowPlaying_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="40dp"
            android:background="@color/colorMovieDBgreen"
            android:drawableStart="@drawable/ic_local_movies_white_48dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center|start"
            android:text="@string/now_playing"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_logo" />

    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>

