<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TVDetailsActivity"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/tvDetailsScrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/tvDetailsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorMovieDBgreen"
                >

                <include
                    android:id="@+id/tvDetails_toolbar"
                    layout="@layout/my_toolbar"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:elevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/tv_poster"
                            android:layout_width="match_parent"
                            android:layout_height="258dp" />

                        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/tv_youtube_fragment"
                            android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp" />

                        <Button
                            android:id="@+id/tv_trailer_button"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/play_trailer"
                            android:textStyle="bold" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:elevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/tv_rate_btn"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/rate"
                            android:textStyle="bold" />

                        <RatingBar
                            android:id="@+id/tv_ratingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:isIndicator="false"
                            android:numStars="5"
                            android:rating="0"
                            android:stepSize="1.0"
                            android:transformPivotX="0dp"
                            android:transformPivotY="0dp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:elevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp"
                            android:text="@string/similar_shows"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/tv_details_recRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:orientation="horizontal">

                        </android.support.v7.widget.RecyclerView>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:elevation="6dp"
                    card_view:cardUseCompatPadding="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="4dp"
                            android:text="@string/show_info"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/colorMovieDBgreen" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/createdByBase_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/created_by"
                                android:textColor="#000"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/createdBy_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textColor="#000"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/firstDateBase_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/first_aired"
                                android:textColor="#000"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/firstDate_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textColor="#000"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/lastDateBase_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/last_aired"
                                android:textColor="#000"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/lastDate_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textColor="#000"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/genreBase_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/genre"
                                android:textColor="#000"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/genre_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textColor="#000"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/numEpisodesBase_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/number_of_episodes"
                                android:textColor="#000"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/numEpisodes_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textColor="#000"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/numSeasonsBase_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/num_seasons"
                                android:textColor="#000"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/numSeasons_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textColor="#000"
                                android:textSize="18sp" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:elevation="6dp"
                    card_view:cardUseCompatPadding="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_overviewBase_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/overview"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/colorMovieDBgreen" />

                        <TextView
                            android:id="@+id/tv_overview_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textColor="#000"
                            android:textSize="18sp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:elevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/cast"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="2dp"
                            android:background="@color/colorMovieDBgreen" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/tv_details_recyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                        </android.support.v7.widget.RecyclerView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorMovieDBgreen" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/tv_FAButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/watchlist"
            app:layout_anchor="@id/tvDetailsScrollview"
            app:layout_anchorGravity="bottom|end" />

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view" />

</android.support.v4.widget.DrawerLayout>